Add full SafeLLMKit project and update .gitignore